Enhance index.html with styles and new content
Added CSS styles for body and box elements, and updated content.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html>
 <head>
     <title>My Website</title>
+    <style>
+        body {
+            background-color: #f0f8ff;
+            font-family: Arial;
+            text-align: center;
+        }
+        h1 {
+            color: darkblue;
+        }
+        .box {
+            background: white;
+            padding: 20px;
+            margin: 40px auto;
+            width: 300px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px gray;
+        }
+    </style>
 </head>
 <body>
-    <h1>สวัสดี เว็บไซต์ของฉัน</h1>
-    <p>ทดสอบ GitHub Pages สำเร็จ 🎉</p>
+
+    <div class="box">
+        <h1>สวัสดี 👋</h1>
+        <p>นี่คือเว็บไซต์ของฉัน</p>
+        <a href="[6]Trees.pdf" target="_blank">
+            เปิดไฟล์งาน PDF
+        </a>
+    </div>
+
 </body>
 </html>
